# google-search-agent-assistant

./: .gitignore  Dockerfile  LICENSE  README.md  development.ipynb  main.py  pyproject.toml
agent/: __init__.py  base.py
agent/tools/: web_tools.py
config/: ai_config_schema.py  aiservice.py  prompt.py
utils/: utils.py
