[project]
name = "search-agent"
version = "0.1.0"
description = ""
authors = [{ name = "Xphi310302", email = "ngxuanphi010402@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
packages = [{ include = "agent" }]  # Update this line with your actual package name

[tool.poetry.dependencies]
python = ">=3.11"
langgraph = "^0.2.61"
langchain-core = "^0.3.29"
langchain-google-genai = "^2.0.8"
langchain-anthropic = "^0.3.1"
langchain-openai = "^0.2.14"
openai = "*"
anthropic = "*"
beautifulsoup4 = "*"
httpx = "*"
aiohttp = "*"
loguru = "*"
requests = "*"
jupyterlab = "^4.3.4"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"